# pyproxy

./: .gitignore  pyproject.toml  pytest.ini
pyproxy/: __init__.py  proxy.py  proxy3.py
tests/: conftest.py  test_call.py  test_ctx_mngr.py  test_delete_has.py  test_dunder.py  test_get_set.py  test_getitem.py  test_iter.py  test_str_repr.py  test_utils.py
